--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>static site projects @ jesterzhou</title>
+    <title>static site projects hosted on github pages @ jesterzhou</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div id="wrapper">
+        using github static pages to host all static sites.
+        <div class="project"><a href="gol/index.html" target="_blank">1. conway's game of life - html, css, js (canvas api)</a></div>
     
+    </div>
 </body>
 </html>
