--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="wrapper">
-        using github static pages to host all static sites.
+        using github static pages to host all static projects.
         <div class="project"><a href="gol/index.html" target="_blank">1. conway's game of life - html, css, js (canvas api)</a></div>
     
     </div>
