testing responsive design

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div id="project-wrapper">
+
         <a href="gol/index.html" target="_blank"> 
-            <div class="project"> 
+            <div class="project">
                 <img src="assets/golphoto.png"></src>
                 <div class="header">conway's game of life</div>
                 <div class="header" id="published">published: aug 2024</div>
@@ -19,21 +20,24 @@
                     <div class="tags">css</div>
                     <div class="tags">javascript</div>
                     <div class="tags">canvas api</div>
-
                 </div>
             </div>
         </a>
 
-        <div class="project">
-            <div class="header">conways game of life</div>
-            <div class="content">
-                <div class="tags">html</div>
-            </div>  
-        </div>
+        <a href="gol/index.html" target="_blank"> 
+            <div class="project">
+                <img src="assets/golphoto.png"></src>
+                <div class="header">conway's game of life</div>
+                <div class="header" id="published">published: aug 2024</div>
 
- 
+                <div class="content">
+                    <div class="tags">html</div>
+                    <div class="tags">css</div>
 
-        
+                </div>
+            </div>
+        </a>        
+
         
     </div>
 </body>
