--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <a href="gol/index.html" target="_blank"> 
             <div class="project">
                 <img src="assets/golphoto.png"></src>
-                <div class="header">conway's game of life</div>
-                <div class="header" id="desc">infinite gol implemented in javascript</div>
+                <div class="header" id="desc">gol is a recreation of conways game of life in a dynamically sized canvas</div>
 
                 <div class="content">
                     <div class="tags">html</div>
@@ -29,8 +28,25 @@
                             </div>
                         </a>
                     </object>
-
                 </div>
+            </div>
+        </a>
+
+        <a href="null" target="_blank">
+            <div class="project">
+                <img src="assets/null"></src>
+                <div class="header" id="desc">foids is a 3d emulation of craig reynold's algorithm "boids"</div>
+
+                <div class="content">
+                    <div class="tags">javascript</div>
+                    <object><a href="https://threejs.org/" target="_blank" id="links">
+                        <div class="tags" id="links">
+                            threejs 
+                            </div>
+                        </a>
+                    </object>
+                    <div class="tags">blender</div>
+                </div> 
             </div>
         </a>
     </div>
