--- a/index.html
+++ b/index.html
@@ -8,56 +8,14 @@
     <script src="index.js"></script>
 </head>
 <body>
-    <div id="general-wrapper">
-        completed static projects
-    </div>
-    <div id="project-wrapper">
-        <a href="gol/index.html" target="_blank"> 
-            <div class="project">
-                <img src="assets/golphoto.png"></src>
-                <div class="header" id="desc">gol is a recreation of conways game of life in a dynamically sized canvas</div>
-
-                <div class="content">
-                    <div class="tags">html</div>
-                    <div class="tags">css</div>
-                    <div class="tags">javascript</div>
-
-                    <object><a href="https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API" target="_blank" id="links">
-                        <div class="tags" id="links">
-                            canvas api
-                            </div>
-                        </a>
-                    </object>
-                </div>
-            </div>
-        </a>
-
-        <a href="null" target="_blank">
-            <div class="project">
-                <img src="assets/null"></src>
-                <div class="header" id="desc">foids is a 3d emulation of craig reynold's algorithm "boids"</div>
-
-                <div class="content">
-                    <div class="tags">javascript</div>
-                    <object><a href="https://threejs.org/" target="_blank" id="links">
-                        <div class="tags" id="links">
-                            threejs 
-                            </div>
-                        </a>
-                    </object>
-                    <div class="tags">blender</div>
-                </div> 
-            </div>
-        </a>
+    <div class="content">
+        <p title="artificial life"><a href="./foids/">foids</a> - simulate flocking fish behaviour</p>
+        <p><a href="./skybox/">skybox</a> - panorama to skybox images</p>
+        <p title="cellular automaton"><a href="./gol/">gol</a> - game of life using canvas api</p>
     </div>
 
-    <footer> 
-        <p>
-            <a class="links" href="https://www.linkedin.com/in/jesterzhou/" target="_blank">linkedin</a><br>
-            <a class="links" href="https://github.com/jesterzhou/" target="_blank">github</a>
-        </p>
-    </footer>
-</body>
+    <div class="footer">
+        <p>jesterzhou(at)cmail(dot)carleton(dot)ca</p>
+    </div>
+</body> 
 </html>
-
-<!-- wrap around <object> to have nested <a> -->
