commenting out content

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <!-- <script src="index.js"></script> -->
 </head>
 <body>
-    <div class="content">
+    <!-- <div class="content">
         <p title="artificial life"><a href="./foids/">foids</a> - simulate flocking fish behaviour</p>
         <p><a href="./skybox/">skybox</a> - panorama to skybox images</p>
         <p title="cellular automaton"><a href="./gol/">gol</a> - game of life using canvas api</p>
-    </div>
+    </div> -->
 
     <div class="footer">
         <p>jesterzhou(at)cmail(dot)carleton(dot)ca</p>
