--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>static site projects hosted on github pages @ jesterzhou</title>
+    <title>Document</title>
     <link rel="stylesheet" href="index.css">
 </head>
-<body>
-    <!-- <div class="content">
-        <p title="artificial life"><a href="./foids/">foids</a> - simulate flocking fish behaviour</p>
-        <p><a href="./skybox/">skybox</a> - panorama to skybox images</p>
-        <p title="cellular automaton"><a href="./gol/">gol</a> - game of life using canvas api</p>
-    </div> -->
+    <body>
+        <div class="content">
+            <p title="artificial life"><a href="./foids/">foids</a> - simulate flocking fish behaviour</p>
+            <p><a href="./skybox/">skybox</a> - panorama to skybox images</p>
+            <p title="cellular automaton"><a href="./gol/">gol</a> - game of life using canvas api</p>
+        </div>
 
-    <div class="footer">
-        <p>jesterzhou(at)cmail(dot)carleton(dot)ca</p>
-    </div>
-</body> 
+        <div class="footer">
+            <p>jesterzhou(at)cmail(dot)carleton(dot)ca</p>
+        </div>
+    </body> 
 </html>
