--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="jester zhou" content="jester zhou static projects">
+    <title>jester zhou page</title>
     <link rel="stylesheet" href="index.css">
 </head>
     <body>
         <div class="content">
-            <p title="artificial life"><a href="./foids/">foids</a> - simulate flocking fish behaviour</p>
-            <p><a href="./skybox/">skybox</a> - panorama to skybox images</p>
-            <p title="cellular automaton"><a href="./gol/">gol</a> - game of life using canvas api</p>
+            <!-- <p title="digital signal processing"></p><a href="https://github.com/jesterzhou/dspwa">dspwa</a> - digital signal processing using web audio api -->
+            <p title="artificial life"><a href="https://github.com/jesterzhou/foids/">foids</a> - simulate flocking fish behaviour using threejs</p>
+            <p><a href="https://github.com/jesterzhou/skybox/">skybox</a> - panorama to skybox images</p>
+            <p title="cellular automaton"><a href="https://github.com/jesterzhou/gol/">gol</a> - game of life using canvas api</p>
         </div>
 
         <div class="footer">
