--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="jester zhou" content="jester zhou static projects">
-    <title>jester zhou page</title>
+    <title>jester zhou - github page</title>
     <link rel="stylesheet" href="index.css">
 </head>
     <body>
