added game of life page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <!-- <p title="digital signal processing"></p><a href="https://github.com/jesterzhou/dspwa">dspwa</a> - digital signal processing using web audio api -->
             <p title="artificial life"><a href="https://github.com/jesterzhou/foids/">foids</a> - simulate flocking fish behaviour using threejs</p>
             <p><a href="https://github.com/jesterzhou/skybox/">skybox</a> - panorama to skybox images</p>
-            <p title="cellular automaton"><a href="https://github.com/jesterzhou/gol/">gol</a> - game of life using canvas api</p>
+            <p title="cellular automaton"><a href="./gol/index.html">gol</a> - game of life using canvas api</p>
         </div>
 
         <div class="footer">
